--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 
 .row{
   margin-top: 20px;
+  
 }
 
 .banner{
@@ -41,13 +42,19 @@ nav li{
 }
 
 img {
+    object-fit: cover;
     max-width: 100%;
+    height: 275px;
   }
 
 #products{
+  padding-top: 5px;
+  border-radius: 10px;
+  background-color: #F3E9F1;
+  justify-content: space-around;
   display: flex;
   flex-wrap: wrap;
-  padding: 0;
+  
 }
 
 .col-md-4{
@@ -60,6 +67,17 @@ img {
 .col-md-4:hover{
   transform:scale(1.02);
   transition: all 1s ease;
+}
+
+span{
+  border-radius: 15px;
+  background-color: white;
+  padding: 3px;
+  border-color: seashell;
+}
+
+footer{
+  margin-top: 10px;
 }
 
 
