--- a/css/styles.css
+++ b/css/styles.css
@@ -45,16 +45,15 @@ img {
     object-fit: cover;
     max-width: 100%;
     height: 275px;
+
   }
 
 #products{
   padding-top: 5px;
   border-radius: 10px;
   background-color: #F3E9F1;
-  justify-content: space-around;
   display: flex;
   flex-wrap: wrap;
-  
 }
 
 .col-md-4{
@@ -69,11 +68,19 @@ img {
   transition: all 1s ease;
 }
 
+h2{
+  font-size: medium;
+}
+
+p{
+  font-size: small;
+}
+
 span{
   border-radius: 15px;
   background-color: white;
   padding: 3px;
-  border-color: seashell;
+  border-color: rgb(255, 249, 245);
 }
 
 footer{
